--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body {
 
   .calculator-display {
     width: 100%;
-    height: 80px;
+    height: 90px;
     font-size: 2rem;
     padding: 10px;
-    border: none;
-    background-color: #222;
-    color: white;
+    border: None;
+    background-color: rgb(67, 82, 165);
+    color: rgb(209, 233, 181);
     text-align: right;
   }
   
@@ -43,19 +43,21 @@ body {
 
   button {
     width: 100%;
-    height: 80px;
+    height: 90px;
     font-size: 1.5rem;
     border: none;
-    background-color: #e0e0e0;
+    background-color: #add5df;
     cursor: pointer;
     border-radius: 5px;
   }
 
   button:hover {
-    background-color: #d0d0d0;
+    background-color: #d6adcd;
   }
   
   #clear {
+    width: 100%;
+    height: 60px;
     position: relative;
     background-color: #f44336;
     color: white;
